--- a/back-end/.eslintrc.json
+++ b/back-end/.eslintrc.json
@@ -6,6 +6,7 @@
   },
   "rules": {
     "semi": ["error", "always"],
-    "quotes": ["error", "single"]
+    "quotes": ["error", "single"],
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
   }
 }
