--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,9 +2,11 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/api/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./src/integration-tests/**/*$NAME*.{test,spec}.js --exit",
+    "start": "node .",
+    "debug": "nodemon ."
   },
   "keywords": [],
   "author": "",
