--- a/front-end/package.json
+++ b/front-end/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "eslint": "^8.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4"
+    "eslint-plugin-import": "^2.25.4",
+    "history": "^5.3.0"
   }
 }
